--- a/rjsoft-web/src/main/resources/application.yml
+++ b/rjsoft-web/src/main/resources/application.yml
@@ -54,3 +54,12 @@ jasypt:
     password: JohnYehyo
     algorithm: PBEWithMD5AndDES
     iv-generator-classname: org.jasypt.iv.NoIvGenerator
+
+# 防止XSS攻击
+xss:
+  # 过滤开关
+  enabled: true
+  # 排除链接（多个用逗号分隔）
+  excludes: /agent/*
+  # 匹配链接（多个用逗号分隔）
+  urlPatterns: /*
